<resources>
    <string name="app_name">DoAnJV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="first_fragment">Thong tin fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="seconds_fragment">Tinh trang suc khoe fragment</string>
    <string name="name">Huynh Ba Phuc</string>
    <string name="ngaysinh">19/10/2001</string>
    <string name="CMND">342075479</string>
    <string name="sdt">0767286897</string>
    <string name="diachi">HCM</string>
    <string name="action_search">Search</string>
    <string-array name="ket_qua_xet_nghiem">
        <item>Dương tính</item>
        <item>Âm tính</item>
    </string-array>

    <string-array name="lich_su_tiem_vaccine">
        <item>Chưa tiêm vaccine</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="xin_chao_user">Xin chào, tên user</string>
    <string name="userimage">Hỉnh ảnh user</string>
    <string name="ho_va_ten">Họ và tên</string>
    <string name="luu_thong_tin">Lưu thông tin</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="thong_tin_ca_nhiem">Thông tin ca nhiễm cộng đồng tại Việt Nam</string>
    <string name="khai_bao_y_te">Khai báo y tế</string>
    <string name="y_te_gan_ban">Trung tâm y tế gần bạn</string>
    <string name="dia_diem_co_f0">Địa điểm có F0</string>
    <string name="ngay_thang_nam_sinh">Ngày tháng năm sinh</string>
    <string name="bat_buoc_nhap">(*)</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="can_cuoc_cong_dan">Số hộ chiếu/CMND/CCCD</string>
    <string name="thanh_pho">Tỉnh/Thành phố</string>
    <string name="quan_huyen">Quận/Huyện</string>
    <string name="phuong_xa">Phường/Xã</string>
    <string name="thon_xom_sonha">Thôn/Xóm/Số nhà</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_thong_tin_ca_nhiem">ThongTinCaNhiemActivity</string>
</resources>